--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@adminjs/fastify": "^4.1.3",
+    "@adminjs/mongoose": "^4.1.0",
+    "@adminjs/themes": "^1.0.1",
+    "@fastify/cookie": "^11.0.1",
     "@fastify/cors": "^10.0.1",
+    "@fastify/session": "^11.0.2",
+    "adminjs": "^7.8.13",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.0",
     "mongodb": "^6.12.0",
