--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -14,13 +15,13 @@
     "@adminjs/fastify": "^4.1.3",
     "@adminjs/mongoose": "^4.1.0",
     "@adminjs/themes": "^1.0.1",
-    "@fastify/cookie": "^11.0.1",
-    "@fastify/cors": "^10.0.1",
-    "@fastify/session": "^11.0.2",
+    "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/session": "^10.9.0",
     "adminjs": "^7.8.13",
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.7",
-    "fastify": "^5.2.0",
+    "fastify": "^4.28.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
