--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.7",
     "fastify": "^4.28.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "nodemon": "^3.1.9"
