--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -50,11 +50,6 @@ react {
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
 
-    project.ext.vectoricons = [
-        iconFontNames: ["MaterialCommunityIcons.ttf", "MaterialIcons.ttf", "Ionicons.ttf"]
-    ]
-    apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
-
     /* Autolinking */
     autolinkLibrariesWithApp()
 }
@@ -82,9 +77,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.yocolo"
+    namespace "com.frontend"
     defaultConfig {
-        applicationId "com.yocolo"
+        applicationId "com.frontend"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
