--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yoColo",
+  "name": "frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,21 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
-    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-pager-view": "^6.6.1",
-    "react-native-reanimated": "^3.16.6",
-    "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-svg": "^15.10.1",
-    "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native": "0.76.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -33,15 +20,13 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.5",
-    "@react-native/eslint-config": "0.76.5",
-    "@react-native/metro-config": "0.76.5",
-    "@react-native/typescript-config": "0.76.5",
+    "@react-native/babel-preset": "0.76.6",
+    "@react-native/eslint-config": "0.76.6",
+    "@react-native/metro-config": "0.76.6",
+    "@react-native/typescript-config": "0.76.6",
     "@types/react": "^18.2.6",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
