--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,11 +1,3 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
-  "compilerOptions": {
-    "typeRoots": ["node_modules/@types", "src/types"],
-    "types": ["jest"],
-    "baseUrl": "./src/",
-    "paths": {
-      "@/*": ["*"]
-    }
-  }
+  "extends": "@react-native/typescript-config/tsconfig.json"
 }
