--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -50,8 +50,15 @@ react {
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
 
+    project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf', "Ionicons.ttf", "MaterialCommunityIcons.ttf" ] // Specify font files
+        ]
+
+    apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
     /* Autolinking */
     autolinkLibrariesWithApp()
+
 }
 
 /**
