--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^7.2.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^3.2.0",
     "react-native-pager-view": "^6.6.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -25,7 +29,8 @@
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
     "react-native-svg-transformer": "^1.5.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
